# neuro

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
backend/: Dockerfile  pyproject.toml  test_api.py  test_create_endpoint.py  test_model_dump.py  test_note.py  test_note_async.py
backend/app/: cli.py  main.py
backend/app/api/routes/: ai.py  analytics.py  auth.py  automations.py  comments.py  graph.py  ingest.py  notes.py  projects.py  search.py  sync.py  tags.py  tasks.py  voice.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
backend/app/models/: __init__.py  audit.py  automation.py  comment.py  note.py  project.py  sync.py  tag.py  task.py  user.py
backend/app/schemas/: __init__.py  ai.py  analytics.py  audit.py  automation.py  comment.py  graph.py  ingest.py  note.py  project.py  search.py  sync.py  tag.py  task.py  user.py  voice.py
backend/app/services/: __init__.py  audit.py  comments.py  crypto.py  notes.py  projects.py  tags.py  tasks.py
backend/app/services/ai/: provider.py
backend/app/services/automation/: engine.py
backend/app/services/ingestion/: notion.py  obsidian.py  pipeline.py  roam.py
backend/app/services/search/: engine.py
backend/app/services/voice/: __init__.py  pipeline.py  tools.py
backend/app/workers/: tasks.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 24bc08a86aa7_initial_schema.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_notes.py  test_projects.py  test_search.py  test_sync.py  test_tags.py  test_tasks.py
backend/tests/unit/: test_ai_providers.py  test_automations.py  test_collaboration.py  test_entity_extraction.py  test_importers.py  test_linking.py  test_tags_analytics.py  test_workspaces.py
docs/: roadmap.md
(+82 files in other folders)
