[project]
name = "neuro-backend"
version = "0.1.0"
description = "Backend for Neuro project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.1",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "chromadb>=0.4.24",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "langchain>=0.1.13",
    "sentence-transformers>=2.6.1",
    "pymupdf>=1.23.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.3.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.setuptools]
packages = ["app"]
