[project]
name = "neuro-backend"
version = "0.1.0"
description = "Backend for Neuro project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.1",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.2.1",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "chromadb>=0.4.24",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "langchain>=0.1.13",
    "sentence-transformers>=2.6.1",
    "pymupdf>=1.23.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
neuro = "app.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "F403", "UP042", "E402"]

[tool.setuptools]
packages = ["app"]
